--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,7 @@
   <meta name="description" content="query.cash - A web based interface to the Bitcoin Cash JSON-RPC">
   <title>query.cash - A web based interface to the Bitcoin Cash JSON-RPC</title>
 
-  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
-  <script src='https://purecss.io/combo/1.18.13?/js/ui.js'></script>
+  <!-- <script src='https://purecss.io/combo/1.18.13?/js/ui.js'></script> -->
 </head>
 <body>
 
