--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <div class="header">
       <h1>query.cash</h1>
       <h2>A web based interface to the Bitcoin Cash JSON-RPC</h2>
-      <p>Welcome to query.cash! Explore the Bitcoin Cash API by selecting a command from the list in the left column.</p>
+      <p>Welcome to query.cash! Explore the Bitcoin Cash API by selecting a command from the list on the left.</p>
     </div>
     <div class="content">
       <div id="root"></div>
