--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,25 @@
     gtag('config', 'UA-115463658-4');
   </script>
 
+  <script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Organization",
+  "url": "https://www.query.cash",
+  "logo": "https://www.query.cash/assets/logo.png",
+  "contactPoint": [
+    { "@type": "ContactPoint",
+      "telephone": "+1-415-306-0841",
+      "contactType": "customer service"
+    }
+  ],
+  "sameAs": [
+    "https://twitter.com/bitboxearth"
+  ]
+}
+</script>
+
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="query.cash - A web based interface to the Bitcoin Cash JSON-RPC">
